# struct-changelog

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: README.md  basic_usage.py  helper_approaches.py  lists_arrays.py  manual_tracking.py  nested_structures.py  objects.py  run_all_examples.py
src/struct_changelog/: __init__.py  helpers.py  manager.py  types.py
tests/: conftest.py  test_capture_context.py  test_data_structures.py  test_helper_changetracker.py  test_helper_create_changelog.py  test_helper_track_changes.py  test_integration_performance.py  test_integration_scenarios.py  test_integration_serialization.py  test_manager_basic.py  test_types.py
