[project]
name = "struct-changelog"
version = "0.1.0"
description = "Tracks changes in nested Python structures (dicts, lists, tuples, and objects with __dict__)."
authors = [
    {name = "Ephraim Seddor",email = "seddorephraim7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "struct_changelog", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.13.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.18.1"
commitizen = "^4.9.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
